--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "eslint:init": "eslint --init"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
     "styled-components": "^5.0.0"
