--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "@emotion/core": "^11.0.0",
     "babel-plugin-styled-components": "^1.8.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
